<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RequestActivity">

    <TextView
        android:id="@+id/requestActivityRequestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/requestTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/donationRequestDescription"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/descriptionBox"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/requestActivityRequestTitle"
        app:layout_constraintTop_toBottomOf="@+id/requestActivityRequestTitle" />

    <Switch
        android:id="@+id/organizationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requestActivityYesNoSwitch"
        app:layout_constraintStart_toStartOf="@+id/requestActivityForOrganizationTextView"
        app:layout_constraintTop_toBottomOf="@+id/requestActivityForOrganizationTextView" />

    <Switch
        android:id="@+id/requestActivityMeetingSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requestActivityYesNoSwitch"
        app:layout_constraintStart_toStartOf="@+id/requestActivityCapableOfMeeting"
        app:layout_constraintTop_toBottomOf="@+id/requestActivityCapableOfMeeting" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/requestActivityHouseholdSize"
        app:layout_constraintStart_toStartOf="@+id/requestActivityMeetingSwitch"
        app:layout_constraintTop_toBottomOf="@+id/requestActivityMeetingSwitch" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/requestFillDate"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/requestDietaryRestrictions"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/requestDietaryRestrictionsExample"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Switch
        android:id="@+id/requestActivityAnonymousSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onOffSwitchRequestActivity"
        app:layout_constraintStart_toStartOf="@+id/requestActivityAnonymous"
        app:layout_constraintTop_toBottomOf="@+id/requestActivityAnonymous" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="@+id/requestActivityAnonymousSwitch"
        app:layout_constraintTop_toBottomOf="@+id/requestActivityAnonymousSwitch" />

    <TextView
        android:id="@+id/requestActivityForOrganizationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/requestActivityForOrganization"
        app:layout_constraintStart_toStartOf="@+id/donationRequestDescription"
        app:layout_constraintTop_toBottomOf="@+id/donationRequestDescription" />

    <TextView
        android:id="@+id/requestActivityCapableOfMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/requestActivityCapableOfMeeting"
        app:layout_constraintStart_toStartOf="@+id/organizationSwitch"
        app:layout_constraintTop_toBottomOf="@+id/organizationSwitch" />

    <TextView
        android:id="@+id/requestActivityAnonymous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/requestActivityAnonymous"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
</androidx.constraintlayout.widget.ConstraintLayout>